--- a/codecrafters-sqlite.csproj
+++ b/codecrafters-sqlite.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FParsec.CSharp" Version="12.2.0" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
+  </ItemGroup>
+
 </Project>
